--- a/pyproject.toml
+++ b/pyproject.toml
@@ -27,7 +27,7 @@ dependencies = [
 requires-python = ">=3.11"
 
 [project.optional-dependencies]
-dev = ["bumpver", "pytest", "pyinstaller"]
+dev = ["bumpver", "black", "pyinstaller"]
 
 [project.scripts]
 tmeanalyzer = "tmeanalyzer:start"
